<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PlayerActivity">

    <TextView
            android:text="@string/label_tile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:textSize="32sp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/label_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            android:textSize="32sp" android:textStyle="bold" app:layout_constraintEnd_toEndOf="@+id/textView"/>
    <TextView
            android:text="@string/label_sub_sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2" android:layout_marginStart="8dp"
            android:textSize="22sp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/textView3" app:layout_constraintEnd_toEndOf="@+id/textView3"
            android:layout_marginTop="64dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:hint="@string/hint_player1"
            style="@style/home_input"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText2"
            app:layout_constraintEnd_toEndOf="@+id/editText" app:layout_constraintStart_toStartOf="@+id/editText"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/editText"
            android:hint="@string/hint_player2" style="@style/away_input"/>
    <Button
            style="@style/custom_button"
            android:text="@string/label_begin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"/>
    <TextView
            android:text="@string/label_developedby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"/>
</androidx.constraintlayout.widget.ConstraintLayout>